bk_ida/gccida/c1/xstrerror
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/xstrerror/src/xstrerror.c:511:25: error: use of undeclared identifier 'aUndocumentedEr'
sprintf( xstrerror_buf, aUndocumentedEr, ( unsigned int)errnum); 
                        ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/xstrerror/src/obj/xstrerror.o] Error 1
